# custom-gpt2-tokenizer

./: .gitignore  README.md  pyproject.toml
src/: merges.pkl  tokenizer.pkl  vocab.pkl
src/notebooks/: nb.ipynb  tokenizer.ipynb
src/tokenizer/: corpus.py  paths.py  tokenizer.py
src/word2vec/: corpus.py  help_functions.py  paths.py  tokenizer.py  vocab.py
