[project]
name = "word2vec"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sghawana", email = "59884048+sghawana@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/word2vec"]
